fix(controls): Increase font size
Some buttons (play, stop, pause...) were blurry on ie, solution was to increase the font-size to prevent this

--- a/styles/ableplayer.css
+++ b/styles/ableplayer.css
@@ -111,7 +111,7 @@
 }
 .able-controller button > span {
   /* icomoon font icon */
-  font-size: 26px;
+  font-size: 27px;
   width: 24px;
   margin: 0 4px;
   padding: 0;
